@@ -21,19 +21,15 @@ import com.navercorp.pinpoint.common.server.bo.SpanEventBo;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 /**
  * @author Woonduk Kang(emeroad)
  */
 public class SpanEventBitFieldTest {
-    @Test
-    public void isSetHasException() throws Exception {
-
-    }
 
     @Test
-    public void setHasException_shortToByteCasting() throws Exception {
+    public void setHasException_shortToByteCasting() {
         SpanEventBitField field = new SpanEventBitField();
         field.setHasException(true);
 
@@ -45,16 +41,6 @@ public class SpanEventBitFieldTest {
 
     }
 
-    @Test
-    public void testRpc_first() throws Exception {
-        SpanEventBo spanEventBo = new SpanEventBo();
-
-        spanEventBo.setRpc("Rpc");
-
-        SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assertions.assertFalse(bitField.isSetRpc());
-
-    }
 
     @Test
     public void testEndPoint_first() throws Exception {
@@ -115,10 +101,10 @@ public class SpanEventBitFieldTest {
 
 
     @Test
-    public void testAnnotation_first() throws Exception {
+    public void testAnnotation_first() {
         SpanEventBo spanEventBo = new SpanEventBo();
 
-        spanEventBo.setAnnotationBoList(Collections.singletonList(new AnnotationBo(1, "test")));
+        spanEventBo.setAnnotationBoList(List.of(AnnotationBo.of(1, "test")));
 
         SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
         Assertions.assertTrue(bitField.isSetAnnotation());
@@ -130,7 +116,7 @@ public class SpanEventBitFieldTest {
 
 
     @Test
-    public void testNextAsyncId_first() throws Exception {
+    public void testNextAsyncId_first() {
         SpanEventBo spanEventBo = new SpanEventBo();
 
         spanEventBo.setNextAsyncId(1234);
@@ -143,23 +129,9 @@ public class SpanEventBitFieldTest {
 
     }
 
-    @Test
-    public void testAsyncId_first() throws Exception {
-        SpanEventBo spanEventBo = new SpanEventBo();
-
-        spanEventBo.setAsyncId(1234);
-        spanEventBo.setAsyncSequence((short) 1234);
-
-        SpanEventBitField bitField = SpanEventBitField.buildFirst(spanEventBo);
-        Assertions.assertTrue(bitField.isSetAsyncId());
-
-        bitField.setAsyncId(false);
-        Assertions.assertFalse(bitField.isSetAsyncId());
-
-    }
 
     @Test
-    public void testStartElapsed_equals_next() throws Exception {
+    public void testStartElapsed_equals_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -172,7 +144,7 @@ public class SpanEventBitFieldTest {
     }
 
     @Test
-    public void testStartElapsed_delta_next() throws Exception {
+    public void testStartElapsed_delta_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -185,7 +157,7 @@ public class SpanEventBitFieldTest {
     }
 
     @Test
-    public void testSequence_add1_next() throws Exception {
+    public void testSequence_add1_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -198,7 +170,7 @@ public class SpanEventBitFieldTest {
     }
 
     @Test
-    public void testSequence_delta_next() throws Exception {
+    public void testSequence_delta_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -211,7 +183,7 @@ public class SpanEventBitFieldTest {
     }
 
     @Test
-    public void testDepth_equals_next() throws Exception {
+    public void testDepth_equals_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -224,7 +196,7 @@ public class SpanEventBitFieldTest {
     }
 
     @Test
-    public void testDepth_raw_next() throws Exception {
+    public void testDepth_raw_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -237,7 +209,7 @@ public class SpanEventBitFieldTest {
     }
 
     @Test
-    public void testServiceType_equals_next() throws Exception {
+    public void testServiceType_equals_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
@@ -250,7 +222,7 @@ public class SpanEventBitFieldTest {
     }
 
     @Test
-    public void testServiceType_raw_next() throws Exception {
+    public void testServiceType_raw_next() {
         SpanEventBo prev = new SpanEventBo();
         SpanEventBo current = new SpanEventBo();
 
