@@ -18,13 +18,14 @@ package com.navercorp.pinpoint.metric.common.model;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.navercorp.pinpoint.common.server.util.json.Jackson;
 import com.navercorp.pinpoint.metric.collector.view.SystemMetricView;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 /**
  * @author Hyunjoon Cho
@@ -32,7 +33,7 @@ import java.util.Collections;
 public class SystemMetricSerializerTest {
 
     private final Logger logger = LogManager.getLogger(this.getClass());
-    private final ObjectMapper mapper = new ObjectMapper();
+    private final ObjectMapper mapper = Jackson.newMapper();
 
     @Test
     public void testLongCounterWithTags() throws JsonProcessingException {
@@ -41,7 +42,7 @@ public class SystemMetricSerializerTest {
         Tag modeTag = new Tag("mode", "ro");
         Tag pathTag = new Tag("path", "/");
         DoubleMetric longMetric = new DoubleMetric("disk", "localhost", "free", 250685575168L,
-                Arrays.asList(deviceTag, fstypeTag, modeTag, pathTag), System.currentTimeMillis());
+                List.of(deviceTag, fstypeTag, modeTag, pathTag), System.currentTimeMillis());
         SystemMetricView systemMetricView = new SystemMetricView("tenandId", "applicationName", longMetric);
         String json = mapper.writeValueAsString(systemMetricView);
         logger.info("{}", json);
@@ -60,7 +61,7 @@ public class SystemMetricSerializerTest {
     public void testDoubleCounter() throws JsonProcessingException {
         Tag cpuTag = new Tag("cpu", "cpu0");
         DoubleMetric doubleMetric = new DoubleMetric("cpu", "localhost", "usage_user", 16.200000000001854,
-                Arrays.asList(cpuTag), System.currentTimeMillis());
+                List.of(cpuTag), System.currentTimeMillis());
         SystemMetricView systemMetricView = new SystemMetricView("tenantId", "applicationName", doubleMetric);
         String json = mapper.writeValueAsString(systemMetricView);
         logger.info("{}", json);
