@@ -22,13 +22,15 @@ import com.navercorp.pinpoint.common.server.util.time.Range;
 import com.navercorp.pinpoint.common.trace.ServiceType;
 import com.navercorp.pinpoint.web.applicationmap.appender.histogram.DefaultNodeHistogramFactory;
 import com.navercorp.pinpoint.web.applicationmap.appender.histogram.NodeHistogramFactory;
+import com.navercorp.pinpoint.web.applicationmap.appender.histogram.SimplifiedNodeHistogramFactory;
 import com.navercorp.pinpoint.web.applicationmap.appender.histogram.datasource.MapResponseNodeHistogramDataSource;
+import com.navercorp.pinpoint.web.applicationmap.appender.histogram.datasource.MapResponseSimplifiedNodeHistogramDataSource;
 import com.navercorp.pinpoint.web.applicationmap.appender.histogram.datasource.ResponseHistogramsNodeHistogramDataSource;
 import com.navercorp.pinpoint.web.applicationmap.appender.server.DefaultServerGroupListFactory;
 import com.navercorp.pinpoint.web.applicationmap.appender.server.ServerGroupListFactory;
 import com.navercorp.pinpoint.web.applicationmap.appender.server.datasource.AgentInfoServerGroupListDataSource;
+import com.navercorp.pinpoint.web.applicationmap.dao.MapResponseDao;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkDataDuplexMap;
-import com.navercorp.pinpoint.web.dao.MapResponseDao;
 import com.navercorp.pinpoint.web.hyperlink.HyperLinkFactory;
 import com.navercorp.pinpoint.web.service.AgentInfoService;
 import com.navercorp.pinpoint.web.vo.Application;
@@ -39,14 +41,12 @@ import com.navercorp.pinpoint.web.vo.agent.AgentInfo;
 import com.navercorp.pinpoint.web.vo.agent.AgentStatus;
 import com.navercorp.pinpoint.web.vo.agent.AgentStatusQuery;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -54,6 +54,7 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -72,6 +73,8 @@ public class ApplicationMapBuilderTest {
 
     private MapResponseNodeHistogramDataSource mapResponseNodeHistogramDataSource;
 
+    private MapResponseSimplifiedNodeHistogramDataSource mapResponseSimplifiedNodeHistogramDataSource;
+
     private ResponseHistogramsNodeHistogramDataSource responseHistogramBuilderNodeHistogramDataSource;
 
     private AgentInfoServerGroupListDataSource agentInfoServerGroupListDataSource;
@@ -82,6 +85,7 @@ public class ApplicationMapBuilderTest {
     public void setUp() {
         MapResponseDao mapResponseDao = mock(MapResponseDao.class);
         mapResponseNodeHistogramDataSource = new MapResponseNodeHistogramDataSource(mapResponseDao);
+        mapResponseSimplifiedNodeHistogramDataSource = new MapResponseSimplifiedNodeHistogramDataSource(mapResponseDao);
 
         ResponseHistograms responseHistograms = mock(ResponseHistograms.class);
         responseHistogramBuilderNodeHistogramDataSource = new ResponseHistogramsNodeHistogramDataSource(responseHistograms);
@@ -100,7 +104,7 @@ public class ApplicationMapBuilderTest {
                 int depth = ApplicationMapBuilderTestHelper.getDepthFromApplicationName(applicationName);
                 ResponseTime responseTime = new ResponseTime(application.getName(), application.getServiceType(), timestamp);
                 responseTime.addResponseTime(ApplicationMapBuilderTestHelper.createAgentIdFromDepth(depth), applicationServiceType.getHistogramSchema().getNormalSlot().getSlotTime(), 1);
-                return Collections.singletonList(responseTime);
+                return List.of(responseTime);
             }
         };
         when(mapResponseDao.selectResponseTime(any(Application.class), any(Range.class))).thenAnswer(responseTimeAnswer);
@@ -128,8 +132,7 @@ public class ApplicationMapBuilderTest {
             @Override
             public AgentStatus answer(InvocationOnMock invocation) throws Throwable {
                 String agentId = invocation.getArgument(0);
-                AgentStatus agentStatus = new AgentStatus(agentId, AgentLifeCycleState.RUNNING, System.currentTimeMillis());
-                return agentStatus;
+                return new AgentStatus(agentId, AgentLifeCycleState.RUNNING, System.currentTimeMillis());
             }
         });
         doAnswer(new Answer<List<Optional<AgentStatus>>>() {
@@ -140,7 +143,7 @@ public class ApplicationMapBuilderTest {
 
                 AgentStatusQuery query = invocation.getArgument(0);
                 for (SimpleAgentKey agentInfo : query.getAgentKeys()) {
-                    AgentStatus agentStatus = new AgentStatus(agentInfo.getAgentId(), AgentLifeCycleState.RUNNING, System.currentTimeMillis());
+                    AgentStatus agentStatus = new AgentStatus(agentInfo.agentId(), AgentLifeCycleState.RUNNING, System.currentTimeMillis());
                     result.add(Optional.of(agentStatus));
                 }
                 return result;
@@ -184,12 +187,12 @@ public class ApplicationMapBuilderTest {
                 .includeServerInfo(serverGroupListFactory)
                 .build(application, buildTimeoutMillis);
 
-        Assertions.assertEquals(1, applicationMap.getNodes().size());
-        Assertions.assertEquals(1, applicationMap.getNodes().size());
-        Assertions.assertEquals(1, applicationMap_parallelAppenders.getNodes().size());
-        Assertions.assertEquals(0, applicationMap.getLinks().size());
-        Assertions.assertEquals(0, applicationMap.getLinks().size());
-        Assertions.assertEquals(0, applicationMap_parallelAppenders.getLinks().size());
+        assertThat(applicationMap.getNodes()).hasSize(1);
+        assertThat(applicationMap.getNodes()).hasSize(1);
+        assertThat(applicationMap_parallelAppenders.getNodes()).hasSize(1);
+        assertThat(applicationMap.getLinks()).isEmpty();
+        assertThat(applicationMap.getLinks()).isEmpty();
+        assertThat(applicationMap_parallelAppenders.getLinks()).isEmpty();
 
         ApplicationMapVerifier verifier = new ApplicationMapVerifier(applicationMap);
         verifier.verify(applicationMap);
@@ -215,12 +218,45 @@ public class ApplicationMapBuilderTest {
                 .includeServerInfo(serverGroupListFactory)
                 .build(linkDataDuplexMap, buildTimeoutMillis);
 
-        Assertions.assertTrue(applicationMap.getNodes().isEmpty());
-        Assertions.assertTrue(applicationMap.getNodes().isEmpty());
-        Assertions.assertTrue(applicationMap_parallelAppenders.getNodes().isEmpty());
-        Assertions.assertTrue(applicationMap.getLinks().isEmpty());
-        Assertions.assertTrue(applicationMap.getLinks().isEmpty());
-        Assertions.assertTrue(applicationMap_parallelAppenders.getLinks().isEmpty());
+        assertThat(applicationMap.getNodes()).isEmpty();
+        assertThat(applicationMap.getNodes()).isEmpty();
+        assertThat(applicationMap_parallelAppenders.getNodes()).isEmpty();
+
+        assertThat(applicationMap.getLinks()).isEmpty();
+        assertThat(applicationMap.getLinks()).isEmpty();
+        assertThat(applicationMap_parallelAppenders.getLinks()).isEmpty();
+
+        ApplicationMapVerifier verifier = new ApplicationMapVerifier(applicationMap);
+        verifier.verify(applicationMap);
+        verifier.verify(applicationMap_parallelAppenders);
+    }
+
+    @Test
+    public void testEmptyCallDataSimplfied() {
+        Range range = Range.between(0, 1000);
+        LinkDataDuplexMap linkDataDuplexMap = new LinkDataDuplexMap();
+
+        NodeHistogramFactory nodeHistogramFactory = new SimplifiedNodeHistogramFactory(mapResponseSimplifiedNodeHistogramDataSource);
+        ServerGroupListFactory serverGroupListFactory = new DefaultServerGroupListFactory(agentInfoServerGroupListDataSource);
+
+        ApplicationMapBuilder applicationMapBuilder = ApplicationMapBuilderTestHelper.createApplicationMapBuilder(range, serialExecutor);
+        ApplicationMapBuilder applicationMapBuilder_parallelAppenders = ApplicationMapBuilderTestHelper.createApplicationMapBuilder(range, parallelExecutor);
+        ApplicationMap applicationMap = applicationMapBuilder
+                .includeNodeHistogram(nodeHistogramFactory)
+                .includeServerInfo(serverGroupListFactory)
+                .build(linkDataDuplexMap, buildTimeoutMillis);
+        ApplicationMap applicationMap_parallelAppenders = applicationMapBuilder_parallelAppenders
+                .includeNodeHistogram(nodeHistogramFactory)
+                .includeServerInfo(serverGroupListFactory)
+                .build(linkDataDuplexMap, buildTimeoutMillis);
+
+        assertThat(applicationMap.getNodes()).isEmpty();
+        assertThat(applicationMap.getNodes()).isEmpty();
+        assertThat(applicationMap_parallelAppenders.getNodes()).isEmpty();
+
+        assertThat(applicationMap.getLinks()).isEmpty();
+        assertThat(applicationMap.getLinks()).isEmpty();
+        assertThat(applicationMap_parallelAppenders.getLinks()).isEmpty();
 
         ApplicationMapVerifier verifier = new ApplicationMapVerifier(applicationMap);
         verifier.verify(applicationMap);
@@ -236,6 +272,12 @@ public class ApplicationMapBuilderTest {
         runTest(depth, depth);
     }
 
+    @Test
+    public void testOneDepthSimplified() {
+        int depth = 1;
+        runTestSimplified(depth, depth);
+    }
+
     /**
      * USER -> WAS -> WAS(center) -> WAS -> UNKNOWN
      */
@@ -245,6 +287,12 @@ public class ApplicationMapBuilderTest {
         runTest(depth, depth);
     }
 
+    @Test
+    public void testTwoDepthSimplified() {
+        int depth = 2;
+        runTestSimplified(depth, depth);
+    }
+
     /**
      * USER -> WAS -> WAS -> WAS(center) -> WAS -> WAS -> UNKNOWN
      */
@@ -252,6 +300,12 @@ public class ApplicationMapBuilderTest {
     public void testThreeDepth() {
         int depth = 3;
         runTest(depth, depth);
+    }
+
+    @Test
+    public void testThreeDepthSimplified() {
+        int depth = 3;
+        runTestSimplified(depth, depth);
     }
 
     /**
@@ -264,6 +318,13 @@ public class ApplicationMapBuilderTest {
         runTest(calleeDepth, callerDepth);
     }
 
+    @Test
+    public void test_1_3_depthSimplified() {
+        int calleeDepth = 1;
+        int callerDepth = 3;
+        runTestSimplified(calleeDepth, callerDepth);
+    }
+
     /**
      * USER -> WAS -> WAS -> WAS(center) -> UNKNOWN
      */
@@ -272,6 +333,13 @@ public class ApplicationMapBuilderTest {
         int calleeDepth = 3;
         int callerDepth = 1;
         runTest(calleeDepth, callerDepth);
+    }
+
+    @Test
+    public void test_3_1_depthSimplified() {
+        int calleeDepth = 3;
+        int callerDepth = 1;
+        runTestSimplified(calleeDepth, callerDepth);
     }
 
     /**
@@ -284,6 +352,13 @@ public class ApplicationMapBuilderTest {
         runTest(calleeDepth, callerDepth);
     }
 
+    @Test
+    public void test_3_4_depthSimplified() {
+        int calleeDepth = 3;
+        int callerDepth = 4;
+        runTestSimplified(calleeDepth, callerDepth);
+    }
+
     /**
      * USER -> WAS -> WAS -> WAS -> WAS(center) -> WAS -> WAS -> UNKNOWN
      */
@@ -292,6 +367,13 @@ public class ApplicationMapBuilderTest {
         int calleeDepth = 4;
         int callerDepth = 3;
         runTest(calleeDepth, callerDepth);
+    }
+
+    @Test
+    public void test_4_3_depthSimplified() {
+        int calleeDepth = 4;
+        int callerDepth = 3;
+        runTestSimplified(calleeDepth, callerDepth);
     }
 
     private void runTest(int callerDepth, int calleeDepth) {
@@ -316,10 +398,12 @@ public class ApplicationMapBuilderTest {
                 .includeNodeHistogram(nodeHistogramFactory_MapResponseDao)
                 .includeServerInfo(serverGroupListFactory)
                 .build(linkDataDuplexMap, buildTimeoutMillis);
-        Assertions.assertEquals(expectedNumNodes, applicationMap_MapResponseDao.getNodes().size());
-        Assertions.assertEquals(expectedNumNodes, applicationMap_MapResponseDao_parallelAppenders.getNodes().size());
-        Assertions.assertEquals(expectedNumLinks, applicationMap_MapResponseDao.getLinks().size());
-        Assertions.assertEquals(expectedNumLinks, applicationMap_MapResponseDao_parallelAppenders.getLinks().size());
+
+        assertThat(applicationMap_MapResponseDao.getNodes()).hasSize(expectedNumNodes);
+        assertThat(applicationMap_MapResponseDao_parallelAppenders.getNodes()).hasSize(expectedNumNodes);
+        assertThat(applicationMap_MapResponseDao.getLinks()).hasSize(expectedNumLinks);
+        assertThat(applicationMap_MapResponseDao_parallelAppenders.getLinks()).hasSize(expectedNumLinks);
+
         ApplicationMapVerifier verifier_MapResponseDao = new ApplicationMapVerifier(applicationMap_MapResponseDao);
         verifier_MapResponseDao.verify(applicationMap_MapResponseDao);
         verifier_MapResponseDao.verify(applicationMap_MapResponseDao_parallelAppenders);
@@ -333,12 +417,47 @@ public class ApplicationMapBuilderTest {
                 .includeNodeHistogram(nodeHistogramFactory_ResponseHistogramBuilder)
                 .includeServerInfo(serverGroupListFactory)
                 .build(linkDataDuplexMap, buildTimeoutMillis);
-        Assertions.assertEquals(expectedNumNodes, applicationMap_ResponseHistogramBuilder.getNodes().size());
-        Assertions.assertEquals(expectedNumNodes, applicationMap_ResponseHistogramBuilder_parallelAppenders.getNodes().size());
-        Assertions.assertEquals(expectedNumLinks, applicationMap_ResponseHistogramBuilder.getLinks().size());
-        Assertions.assertEquals(expectedNumLinks, applicationMap_ResponseHistogramBuilder_parallelAppenders.getLinks().size());
+
+        assertThat(applicationMap_ResponseHistogramBuilder.getNodes()).hasSize(expectedNumNodes);
+        assertThat(applicationMap_ResponseHistogramBuilder_parallelAppenders.getNodes()).hasSize(expectedNumNodes);
+        assertThat(applicationMap_ResponseHistogramBuilder.getLinks()).hasSize(expectedNumLinks);
+        assertThat(applicationMap_ResponseHistogramBuilder_parallelAppenders.getLinks()).hasSize(expectedNumLinks);
+
         ApplicationMapVerifier verifier_ResponseHistogramBuilder = new ApplicationMapVerifier(applicationMap_ResponseHistogramBuilder);
         verifier_ResponseHistogramBuilder.verify(applicationMap_ResponseHistogramBuilder);
         verifier_ResponseHistogramBuilder.verify(applicationMap_ResponseHistogramBuilder_parallelAppenders);
     }
+
+    private void runTestSimplified(int callerDepth, int calleeDepth) {
+        Range range = Range.between(0, 1000);
+        int expectedNumNodes = ApplicationMapBuilderTestHelper.getExpectedNumNodes(calleeDepth, callerDepth);
+        int expectedNumLinks = ApplicationMapBuilderTestHelper.getExpectedNumLinks(calleeDepth, callerDepth);
+
+        NodeHistogramFactory nodeHistogramFactory_MapResponseDao = new SimplifiedNodeHistogramFactory(mapResponseSimplifiedNodeHistogramDataSource);
+        ServerGroupListFactory serverGroupListFactory = new DefaultServerGroupListFactory(agentInfoServerGroupListDataSource);
+
+        LinkDataDuplexMap linkDataDuplexMap = ApplicationMapBuilderTestHelper.createLinkDataDuplexMap(calleeDepth, callerDepth);
+        ApplicationMapBuilder applicationMapBuilder = ApplicationMapBuilderTestHelper.createApplicationMapBuilder(range, serialExecutor);
+        ApplicationMapBuilder applicationMapBuilder_parallelAppenders = ApplicationMapBuilderTestHelper.createApplicationMapBuilder(range, parallelExecutor);
+
+        // test builder using MapResponseDao
+        ApplicationMap applicationMap_MapResponseDao = applicationMapBuilder
+                .includeNodeHistogram(nodeHistogramFactory_MapResponseDao)
+                .includeServerInfo(serverGroupListFactory)
+                .build(linkDataDuplexMap, buildTimeoutMillis);
+        ApplicationMap applicationMap_MapResponseDao_parallelAppenders = applicationMapBuilder_parallelAppenders
+                .includeNodeHistogram(nodeHistogramFactory_MapResponseDao)
+                .includeServerInfo(serverGroupListFactory)
+                .build(linkDataDuplexMap, buildTimeoutMillis);
+
+        assertThat(applicationMap_MapResponseDao.getNodes()).hasSize(expectedNumNodes);
+        assertThat(applicationMap_MapResponseDao_parallelAppenders.getNodes()).hasSize(expectedNumNodes);
+        assertThat(applicationMap_MapResponseDao.getLinks()).hasSize(expectedNumLinks);
+        assertThat(applicationMap_MapResponseDao_parallelAppenders.getLinks()).hasSize(expectedNumLinks);
+
+        ApplicationMapVerifier verifier_MapResponseDao = new ApplicationMapVerifier(applicationMap_MapResponseDao);
+        verifier_MapResponseDao.verify(applicationMap_MapResponseDao);
+        verifier_MapResponseDao.verify(applicationMap_MapResponseDao_parallelAppenders);
+    }
 }
+
