@@ -16,14 +16,14 @@
 
 package com.navercorp.pinpoint.web.dao.hbase;
 
-import com.navercorp.pinpoint.common.hbase.HbaseOperations2;
-import com.navercorp.pinpoint.common.hbase.HbaseTable;
+import com.navercorp.pinpoint.common.hbase.HbaseOperations;
+import com.navercorp.pinpoint.common.hbase.HbaseTableNameProvider;
 import com.navercorp.pinpoint.common.hbase.LimitEventHandler;
 import com.navercorp.pinpoint.common.hbase.RowMapper;
 import com.navercorp.pinpoint.common.hbase.TableNameProvider;
 import com.navercorp.pinpoint.common.profiler.util.TransactionId;
 import com.navercorp.pinpoint.common.server.util.time.Range;
-import com.navercorp.pinpoint.web.config.ScatterChartConfig;
+import com.navercorp.pinpoint.web.config.ScatterChartProperties;
 import com.navercorp.pinpoint.web.dao.ApplicationTraceIndexDao;
 import com.navercorp.pinpoint.web.scatter.ScatterData;
 import com.navercorp.pinpoint.web.scatter.ScatterDataBuilder;
@@ -42,10 +42,10 @@ import org.mockito.MockitoAnnotations;
 import org.mockito.Spy;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
@@ -55,7 +55,7 @@ import static org.mockito.Mockito.when;
 public class HbaseApplicationTraceIndexDaoTest {
 
     @Mock
-    private HbaseOperations2 hbaseOperations2;
+    private HbaseOperations hbaseOperations;
 
     @Mock
     private RowMapper<List<TransactionId>> traceIndexMapper;
@@ -67,23 +67,7 @@ public class HbaseApplicationTraceIndexDaoTest {
     private AbstractRowKeyDistributor traceIdRowKeyDistributor;
 
     @Spy
-    private final TableNameProvider tableNameProvider = new TableNameProvider() {
-
-        @Override
-        public TableName getTableName(HbaseTable hBaseTable) {
-            return getTableName(hBaseTable.getName());
-        }
-
-        @Override
-        public TableName getTableName(String tableName) {
-            return TableName.valueOf(tableName);
-        }
-
-        @Override
-        public boolean hasDefaultNameSpace() {
-            return true;
-        }
-    };
+    private final TableNameProvider tableNameProvider = new HbaseTableNameProvider("default");
 
     private ApplicationTraceIndexDao applicationTraceIndexDao;
 
@@ -92,8 +76,8 @@ public class HbaseApplicationTraceIndexDaoTest {
     @BeforeEach
     public void beforeEach() {
         openMocks = MockitoAnnotations.openMocks(this);
-        ScatterChartConfig scatterChartConfig = new ScatterChartConfig();
-        this.applicationTraceIndexDao = new HbaseApplicationTraceIndexDao(scatterChartConfig, hbaseOperations2, tableNameProvider, traceIndexMapper, traceIndexScatterMapper, traceIdRowKeyDistributor);
+        ScatterChartProperties scatterChartProperties = new ScatterChartProperties();
+        this.applicationTraceIndexDao = new HbaseApplicationTraceIndexDao(scatterChartProperties, hbaseOperations, tableNameProvider, traceIndexMapper, traceIndexScatterMapper, traceIdRowKeyDistributor);
     }
 
     @AfterEach
@@ -111,17 +95,17 @@ public class HbaseApplicationTraceIndexDaoTest {
     @Test
     public void scanTraceIndexTest() {
         final List<List<TransactionId>> scannedList = createTraceIndexList();
-        when(this.hbaseOperations2.findParallel(any(TableName.class), any(Scan.class), any(AbstractRowKeyDistributor.class),
+        when(this.hbaseOperations.findParallel(any(TableName.class), any(Scan.class), any(AbstractRowKeyDistributor.class),
                 anyInt(), any(RowMapper.class), any(LimitEventHandler.class), anyInt())).thenReturn(scannedList);
         LimitedScanResult<List<TransactionId>> result =
                 this.applicationTraceIndexDao.scanTraceIndex("app", Range.between(1000L, 5000L), 20, false);
-        Assertions.assertEquals(1000L, result.getLimitedTime());
-        Assertions.assertEquals(ListListUtils.toList(scannedList), result.getScanData());
+        Assertions.assertEquals(1000L, result.limitedTime());
+        Assertions.assertEquals(ListListUtils.toList(scannedList), result.scanData());
 
         // using last row accessor
         result = this.applicationTraceIndexDao.scanTraceIndex("app", Range.between(1000L, 5000L), 5, true);
-        Assertions.assertEquals(-1L, result.getLimitedTime());
-        Assertions.assertEquals(ListListUtils.toList(scannedList), result.getScanData());
+        Assertions.assertEquals(-1L, result.limitedTime());
+        Assertions.assertEquals(ListListUtils.toList(scannedList), result.scanData());
 
     }
 
@@ -134,31 +118,31 @@ public class HbaseApplicationTraceIndexDaoTest {
 
     @Test
     public void scanTraceScatterDataEmptyTest() {
-        List<ScatterData> scannedList = new ArrayList<>();
-        when(this.hbaseOperations2.findParallel(any(TableName.class), any(Scan.class), any(AbstractRowKeyDistributor.class),
-                anyInt(), any(RowMapper.class), any(LimitEventHandler.class), anyInt())).thenReturn(scannedList);
+
+        when(this.hbaseOperations.findParallel(any(TableName.class), any(Scan.class), any(AbstractRowKeyDistributor.class),
+                anyInt(), any(RowMapper.class), any(LimitEventHandler.class), anyInt())).thenReturn(List.of());
         Range range = Range.between(1000L, 5000L);
         LimitedScanResult<List<Dot>> scanResult
                 = this.applicationTraceIndexDao.scanTraceScatterData("app", range, 10, false);
         ScatterDataBuilder builder = new ScatterDataBuilder(range.getFrom(), range.getTo(), 1, 5);
-        scanResult.getScanData().forEach(builder::addDot);
+        scanResult.scanData().forEach(builder::addDot);
         ScatterData result = builder.build();
 
         Assertions.assertEquals(1000L, result.getFrom());
         Assertions.assertEquals(5000L, result.getTo());
-        Assertions.assertEquals(0, result.getScatterData().size());
+        assertThat(result.getScatterData()).isEmpty();
     }
 
     @Test
     public void scanTraceScatterDataTest() {
         List<List<Dot>> scatterDotList = createScatterDotList();
-        when(this.hbaseOperations2.findParallel(any(TableName.class), any(Scan.class), any(AbstractRowKeyDistributor.class),
+        when(this.hbaseOperations.findParallel(any(TableName.class), any(Scan.class), any(AbstractRowKeyDistributor.class),
                 anyInt(), any(RowMapper.class), anyInt())).thenReturn(scatterDotList);
         Range range = Range.between(1000L, 5000L);
         LimitedScanResult<List<Dot>> scanResult
                 = this.applicationTraceIndexDao.scanTraceScatterData("app", range, 10, false);
         ScatterDataBuilder builder = new ScatterDataBuilder(range.getFrom(), range.getTo(), 1, 5);
-        scanResult.getScanData().forEach(builder::addDot);
+        scanResult.scanData().forEach(builder::addDot);
         ScatterData result = builder.build();
         Assertions.assertEquals(1000L, result.getFrom());
         Assertions.assertEquals(5000L, result.getTo());
@@ -176,7 +160,7 @@ public class HbaseApplicationTraceIndexDaoTest {
     }
 
     private void addDot(List<List<Dot>> list, Dot dot) {
-        list.add(Collections.singletonList(dot));
+        list.add(List.of(dot));
     }
 
 
