@@ -3,6 +3,7 @@ package com.navercorp.pinpoint.web.view;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.navercorp.pinpoint.common.server.util.json.Jackson;
 import com.navercorp.pinpoint.common.trace.ServiceType;
 import com.navercorp.pinpoint.web.vo.Application;
 import org.apache.logging.log4j.LogManager;
@@ -10,7 +11,6 @@ import org.apache.logging.log4j.Logger;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -18,13 +18,13 @@ public class ApplicationGroupTest {
 
     private final Logger logger = LogManager.getLogger(this.getClass());
 
-    private final ObjectMapper mapper = new ObjectMapper();
+    private final ObjectMapper mapper = Jackson.newMapper();
 
     @Test
     public void getApplicationList() throws JsonProcessingException {
         Application app1 = new Application("test1", ServiceType.TEST);
         Application app2 = new Application("test2", ServiceType.TEST);
-        ApplicationGroup group = new ApplicationGroup(Arrays.asList(app1, app2));
+        ApplicationGroup group = new ApplicationGroup(List.of(app1, app2));
         String json = mapper.writeValueAsString(group);
 
         TypeReference<List<Map<String, String>>> ref = new TypeReference<>() {};
