@@ -16,7 +16,6 @@
 
 package com.navercorp.pinpoint.web.vo.timeline.inspector;
 
-import com.navercorp.pinpoint.common.server.bo.event.AgentEventBo;
 import com.navercorp.pinpoint.common.server.util.AgentEventType;
 import com.navercorp.pinpoint.common.server.util.AgentLifeCycleState;
 import com.navercorp.pinpoint.common.server.util.time.Range;
@@ -25,8 +24,6 @@ import com.navercorp.pinpoint.web.vo.agent.AgentStatus;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -38,7 +35,7 @@ public class AgentStatusTimelineTest {
     public void nullAgentStatus() {
         // Given
         Range timelineRange = Range.between(0, 100);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Collections.singletonList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(0, 100, AgentState.UNKNOWN));
         // When
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, null).build();
@@ -51,7 +48,7 @@ public class AgentStatusTimelineTest {
     public void nullAgentStatus_nullAgentEvents() {
         // Given
         Range timelineRange = Range.between(0, 100);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Collections.singletonList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(0, 100, AgentState.UNKNOWN));
         // When
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, null).build();
@@ -65,7 +62,7 @@ public class AgentStatusTimelineTest {
         // Given
         Range timelineRange = Range.between(100, 200);
         AgentLifeCycleState expectedState = AgentLifeCycleState.RUNNING;
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Collections.singletonList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 200, AgentState.fromAgentLifeCycleState(expectedState)));
         // When
         AgentStatus initialStatus = createAgentStatus(50, expectedState);
@@ -80,7 +77,7 @@ public class AgentStatusTimelineTest {
         // Given
         Range timelineRange = Range.between(100, 200);
         AgentLifeCycleState expectedState = AgentLifeCycleState.RUNNING;
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Collections.singletonList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 200, AgentState.fromAgentLifeCycleState(expectedState)));
         // When
         AgentStatus initialStatus = createAgentStatus(50, expectedState);
@@ -94,13 +91,13 @@ public class AgentStatusTimelineTest {
     public void singleLifeCycle_startedBeforeTimelineStartTimestamp() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Collections.singletonList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 200, AgentState.RUNNING));
         // When
         long agentA = 0;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 140, AgentEventType.AGENT_PING),
                         createAgentEvent(agentA, 190, AgentEventType.AGENT_PING)
                 )).build();
@@ -113,14 +110,14 @@ public class AgentStatusTimelineTest {
     public void singleLifeCycle_startedAfterTimelineStartTimestamp_initialStateRunning() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Arrays.asList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 150, AgentState.RUNNING),
                 createSegment(150, 200, AgentState.RUNNING));
         // When
         long agentA = 150;
         AgentStatus initialStatus = createAgentStatus(50, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 150, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentA, 180, AgentEventType.AGENT_PING)
                 )).build();
@@ -133,14 +130,14 @@ public class AgentStatusTimelineTest {
     public void singleLifeCycle_startedAfterTimelineStartTimestamp_initialStateShutdown() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Arrays.asList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 150, AgentState.SHUTDOWN),
                 createSegment(150, 200, AgentState.RUNNING));
         // When
         long agentA = 150;
         AgentStatus initialStatus = createAgentStatus(50, AgentLifeCycleState.SHUTDOWN);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 150, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentA, 180, AgentEventType.AGENT_PING)
                 )).build();
@@ -153,14 +150,14 @@ public class AgentStatusTimelineTest {
     public void singleLifeCycle_endedBeforeTimelineEndTimestamp() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Arrays.asList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 180, AgentState.RUNNING),
                 createSegment(180, 200, AgentState.SHUTDOWN));
         // When
         long agentA = 0;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 120, AgentEventType.AGENT_PING),
                         createAgentEvent(agentA, 150, AgentEventType.AGENT_PING),
                         createAgentEvent(agentA, 180, AgentEventType.AGENT_SHUTDOWN)
@@ -174,13 +171,13 @@ public class AgentStatusTimelineTest {
     public void singleLifeCycle_disconnected() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Collections.singletonList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 200, AgentState.RUNNING));
         // When
         long agentA = 0;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 150, AgentEventType.AGENT_CLOSED_BY_SERVER),
                         createAgentEvent(agentA, 160, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentA, 180, AgentEventType.AGENT_PING)
@@ -194,7 +191,7 @@ public class AgentStatusTimelineTest {
     public void multipleLifeCycles_disconnected() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Arrays.asList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 150, AgentState.RUNNING),
                 createSegment(150, 160, AgentState.UNKNOWN),
                 createSegment(160, 200, AgentState.RUNNING));
@@ -203,7 +200,7 @@ public class AgentStatusTimelineTest {
         long agentB = 160;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 150, AgentEventType.AGENT_CLOSED_BY_SERVER),
                         createAgentEvent(agentB, 160, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentB, 180, AgentEventType.AGENT_PING)
@@ -217,7 +214,7 @@ public class AgentStatusTimelineTest {
     public void multipleLifeCycles_noOverlap() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Arrays.asList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 140, AgentState.RUNNING),
                 createSegment(140, 160, AgentState.SHUTDOWN),
                 createSegment(160, 200, AgentState.RUNNING));
@@ -226,7 +223,7 @@ public class AgentStatusTimelineTest {
         long agentB = 160;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 140, AgentEventType.AGENT_UNEXPECTED_SHUTDOWN),
                         createAgentEvent(agentB, 160, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentB, 180, AgentEventType.AGENT_PING)
@@ -240,7 +237,7 @@ public class AgentStatusTimelineTest {
     public void multipleLifeCycles_noOverlap2() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Arrays.asList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 159, AgentState.RUNNING),
                 createSegment(159, 160, AgentState.SHUTDOWN),
                 createSegment(160, 200, AgentState.RUNNING));
@@ -249,7 +246,7 @@ public class AgentStatusTimelineTest {
         long agentB = 160;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 159, AgentEventType.AGENT_UNEXPECTED_SHUTDOWN),
                         createAgentEvent(agentB, 160, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentB, 180, AgentEventType.AGENT_PING)
@@ -263,7 +260,7 @@ public class AgentStatusTimelineTest {
     public void multipleLifeCycles_noOverlap3() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Arrays.asList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 120, AgentState.SHUTDOWN),
                 createSegment(120, 140, AgentState.RUNNING),
                 createSegment(140, 160, AgentState.SHUTDOWN),
@@ -274,7 +271,7 @@ public class AgentStatusTimelineTest {
         long agentB = 160;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.SHUTDOWN);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 120, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentA, 140, AgentEventType.AGENT_UNEXPECTED_SHUTDOWN),
                         createAgentEvent(agentB, 160, AgentEventType.AGENT_CONNECTED),
@@ -289,7 +286,7 @@ public class AgentStatusTimelineTest {
     public void multipleLifeCycles_overlap() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Arrays.asList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 180, AgentState.RUNNING),
                 createSegment(180, 200, AgentState.SHUTDOWN));
         // When
@@ -297,7 +294,7 @@ public class AgentStatusTimelineTest {
         long agentB = 120;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentB, 120, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentA, 140, AgentEventType.AGENT_PING),
                         createAgentEvent(agentB, 160, AgentEventType.AGENT_UNEXPECTED_SHUTDOWN),
@@ -312,14 +309,14 @@ public class AgentStatusTimelineTest {
     public void multipleLifeCycles_overlap2() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Collections.singletonList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 200, AgentState.RUNNING));
         // When
         long agentA = 0;
         long agentB = 160;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 160, AgentEventType.AGENT_UNEXPECTED_SHUTDOWN),
                         createAgentEvent(agentB, 160, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentB, 180, AgentEventType.AGENT_PING)
@@ -333,7 +330,7 @@ public class AgentStatusTimelineTest {
     public void multipleLifeCycles_overlap3() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Collections.singletonList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 200, AgentState.RUNNING));
         // When
         long agentA = 80;
@@ -341,7 +338,7 @@ public class AgentStatusTimelineTest {
         long agentC = 110;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 120, AgentEventType.AGENT_PING),
                         createAgentEvent(agentB, 130, AgentEventType.AGENT_PING),
                         createAgentEvent(agentC, 140, AgentEventType.AGENT_PING),
@@ -359,7 +356,7 @@ public class AgentStatusTimelineTest {
     public void multipleLifeCycles_overlap4() {
         // Given
         Range timelineRange = Range.between(100, 200);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Collections.singletonList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 200, AgentState.RUNNING));
         // When
         long agentA = 90;
@@ -368,7 +365,7 @@ public class AgentStatusTimelineTest {
         long agentD = 180;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 120, AgentEventType.AGENT_PING),
                         createAgentEvent(agentB, 130, AgentEventType.AGENT_CONNECTED),
                         createAgentEvent(agentA, 150, AgentEventType.AGENT_SHUTDOWN),
@@ -386,7 +383,7 @@ public class AgentStatusTimelineTest {
     public void multipleLifeCycles_mixed() {
         // Given
         Range timelineRange = Range.between(100, 300);
-        List<AgentStatusTimelineSegment> expectedTimelineSegments = Arrays.asList(
+        List<AgentStatusTimelineSegment> expectedTimelineSegments = List.of(
                 createSegment(100, 150, AgentState.RUNNING),
                 createSegment(150, 160, AgentState.UNKNOWN),
                 createSegment(160, 250, AgentState.RUNNING),
@@ -400,7 +397,7 @@ public class AgentStatusTimelineTest {
         long agentD = 260;
         AgentStatus initialStatus = createAgentStatus(90, AgentLifeCycleState.RUNNING);
         AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, initialStatus,
-                Arrays.asList(
+                List.of(
                         createAgentEvent(agentA, 120, AgentEventType.AGENT_PING),
                         createAgentEvent(agentA, 150, AgentEventType.AGENT_UNEXPECTED_CLOSE_BY_SERVER),
                         createAgentEvent(agentB, 160, AgentEventType.AGENT_CONNECTED),
@@ -417,12 +414,11 @@ public class AgentStatusTimelineTest {
     }
 
     private AgentStatus createAgentStatus(long timestamp, AgentLifeCycleState state) {
-        AgentStatus agentStatus = new AgentStatus("testAgent", state, timestamp);
-        return agentStatus;
+        return new AgentStatus("testAgent", state, timestamp);
     }
 
     private AgentEvent createAgentEvent(long agentStartTimestamp, long timestamp, AgentEventType agentEventType) {
-        return new AgentEvent(new AgentEventBo("testAgentId", agentStartTimestamp, timestamp, agentEventType));
+        return new AgentEvent("testAgentId", agentStartTimestamp, timestamp, agentEventType);
     }
 
     private AgentStatusTimelineSegment createSegment(long startTimestamp, long endTimestamp, AgentState state) {
